--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ https://templatemo.com/tm-582-tale-seo-agency
             <div class="line-dec"></div>
             <h4>Fly <em>Into The Devs</em> World <span>With CustomDevs</span></h4>
             <p>CustomDevs is the best agency website for your business.</p>
-            <div class="main-button scroll-to-section"><a href="#services">Discover More</a></div>
+            <div class="main-button scroll-to-section"><a href="about.html">Discover More</a></div>
             <span>or</span>
             <div class="second-button"><a href="faqs.html">Check our FAQs</a></div>
           </div>
