--- a/about.html
+++ b/about.html
@@ -117,10 +117,10 @@
             <h6>CustomDevs</h6>
             <div class="line-dec"></div>
             <h4>Discover More <em>About Us</em></h4>
-            <p>CustomDevs is a small programming company based in [city], [state]. We specialize in providing top-quality academic solutions, app development, and website design services to clients looking to turn their ideas into a reality.</p>
-            <div class="main-button"><a href="#">Discover More</a></div>
+            <p>CustomDevs is a small programming company based in Philippines & Dubai. We specialize in providing top-quality academic solutions, app development, and website design services to clients looking to turn their ideas into a reality.</p>
+            <div class="main-button"><a href="index.html">Discover More</a></div>
             <span>or</span>
-            <div class="second-button"><a href="#">Check our FAQs</a></div>
+            <div class="second-button"><a href="faqs.html">Check our FAQs</a></div>
           </div>
         </div>
         <div class="col-lg-5 align-self-center">
@@ -143,9 +143,9 @@
           <div class="section-heading">
             <h2>Detailed Information On What We Do &amp; Who We Are</h2>
             <div class="line-dec"></div>
-            <p>CustomDevs is a small programming company based in [city], [state]. We specialize in providing top-quality academic solutions, app development, and website design services to clients looking to turn their ideas into a reality.
+            <p>CustomDevs is a small programming company based in Philippines & Dubai . We specialize in providing top-quality academic solutions, app development, social media marketing, graphic design, and website design services to clients looking to turn their ideas into a reality.
 
-              Our journey began back when we were known as CustomJin, named after our founder, Jin, and his passion for the tech industry. Since then, we've rebranded as CustomDevs and have grown our team to include a group of highly skilled and experienced developers.
+              Our journey began back when we were known as CustomJin, Since then, we've rebranded as CustomDevs and have grown our team to include a group of highly skilled and experienced developers.
               
               At CustomDevs, we believe that technology has the power to transform lives and make the world a better place.</p>
           </div>
@@ -157,7 +157,7 @@
             </div>
             <div class="skill-slide digital">
               <div class="fills"></div>
-              <h6>Academic Solutions </h6>
+              <h6>Social Media Marketing<h6>
               <span></span>
             </div>
             </div>
