--- a/index.html
+++ b/index.html
@@ -146,8 +146,10 @@ https://templatemo.com/tm-582-tale-seo-agency
                 <div class="icon">
                   <img src="assets/images/services-04.jpg" alt="SEO marketing" class="templatemo-feature">
                 </div>
-                <h4>Academic Solutions</h4>
-                <p>Your academic work can be made better overall by using our services. Our skilled staff members, who are knowledgeable in a range of academic disciplines, can offer direction and help in creating assignments, papers, and projects that are thoroughly researched and expertly written.</p>
+                <h4>SOCIAL MEDIA MARKETING</h4>
+                <p>I can create a social media strategy tailored specifically to your business needs. This strategy will be based on your goals, target audience, and industry, and will outline the tactics needed to achieve success on social media platforms.
+
+                  Next, I can manage your social media accounts to ensure they are consistently updated with relevant content that resonates with your audience.</p>
               </div>
             </div>
           </div>
@@ -311,6 +313,7 @@ https://templatemo.com/tm-582-tale-seo-agency
                       <div class="info-item">
                         <i class="fa fa-phone"></i>
                         <h4><a href="#">+639772141986</a></h4>
+                        <h4><a href="#">+971505704213</a></h4>
                       </div>
                     </div>
                     <div class="col-lg-4">
@@ -322,7 +325,8 @@ https://templatemo.com/tm-582-tale-seo-agency
                     <div class="col-lg-4">
                       <div class="info-item">
                         <i class="fa fa-map-marker"></i>
-                        <h4><a href="#">Philippines</a></h4>
+                        <h4><a href="#">Philippines</a></h4> 
+                        <h4><a href="#">Dubai</a></h4>
                       </div>
                     </div>
                   </div>
